add repo_url to app config

--- a/build.properties
+++ b/build.properties
@@ -2,6 +2,7 @@ app.name=Text Prizm
 app.shortname=textprizm
 app.version=0.2.0
 app.environment=development
+app.repo_url=https://github.com/etcgroup/text-prizm
 
 ; directories
 src.dir=${basedir}/src
